Fixed inital background flicker

--- a/style/global.css
+++ b/style/global.css
@@ -5,6 +5,7 @@
 
 html,
 body {
+  background-color: var(--page-bg-color);
   margin: 0;
   padding: 0;
   font-family: 'monospace',-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
@@ -14,7 +15,6 @@ body {
 #loader {
   width: 100vw;
   height: 100vh;
-  background-color: var(--page-bg-color);
   text-align: center;
   font-size: 3vw;
   color: white;
@@ -45,7 +45,6 @@ body {
 .page-wrap {
   display: flex;
   flex-direction: column;
-  background-color: var(--page-bg-color);
   min-height: calc(100vh - var(--header-size));
   align-items: center;
   margin: auto;
